[build-system]
requires = [
	"setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "cbrrr"
version = "0.0.1"
authors = [
 	{ name="David Buchanan", email="d@vidbuchanan.co.uk" },
]
description = "A reasonably fast DAG-CBOR encoder/decoder for Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
]

[project.optional-dependencies]
fixtures = [
	"base58",
]

[project.urls]
Homepage = "https://github.com/DavidBuchanan314/dag-cbrrr"
Issues = "https://github.com/DavidBuchanan314/dag-cbrrr"
